# hs_se_233_12-emulator

./: CMakeLists.txt
exceptions/: CMakeLists.txt  exc.h
lib/: CMakeLists.txt  stack.h
lib/stack/: CMakeLists.txt  stack.h
lib/stack/src/: stack.h
lib/stack/tests/: Stack.cpp
src/: CMakeLists.txt  commands.cpp  commands.h  cpu.h  data.h  main.cpp  parser.cpp  parser.h  prep.h
test/: CMakeLists.txt  test.cpp
test/cases/: Stack.cpp  commands.cpp  cpu.cpp  parser.cpp  preprocessor.cpp  test_data.h
test/data/: factor_cycle.txt  factor_rec.txt  factor_rec.txt.emu  fibonachi.txt  fibonachi_1.txt  test.txt
